# Starry-archived

./: .gitignore  .prettierignore  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
.github/workflows/: publish.yml
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/lib/component/block/: index.svelte
src/lib/component/magnet/: index.svelte
src/lib/component/magnet/component/: menu.svelte
src/lib/tauri/: README.md  app.ts  bundle.ts  cli.ts  clipboard.ts  dialog.ts  event.ts  fs.ts  globalShortcut.ts  http.ts  index.ts  notification.ts  path.ts  process.ts  shell.ts  tauri.ts  updater.ts  window.ts
src/lib/tauri/helpers/: event.ts  tauri.ts
src/routes/: __layout.svelte  index.svelte
src/routes/_component/: searchBar.svelte
static/_app/: layout.svelte-7e18b02e.js
static/_app/assets/pages/: index.svelte-ed63de68.css
static/_app/pages/: index.svelte-55e1ad76.js
